fixed spacing

--- a/src/_scss/pages/homepage/_wordOfTheDay.scss
+++ b/src/_scss/pages/homepage/_wordOfTheDay.scss
@@ -1,7 +1,8 @@
 .word-of-the-day__section {
-  margin: rem(6) 0;
+  display: flex;
+  width: 100%;
+  height: 100%;
   @media (min-width: $medium-screen) {
-    margin: rem(6) 0 rem(6) rem(3) ;
     // override grid-content bc it adds margins right and left
     //.grid-content {
     //  margin: 0 !important;
